new task component communicates with app component

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
   font-size: 62.5%;
 
@@ -16,6 +22,10 @@
   --danger: #E25858;
 }
 
+:focus {
+  outline: 2px solid var(--blue-dark);
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   background: var(--gray-600);
@@ -26,4 +36,8 @@ body, input, textarea, button {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
+}
+
+ul {
+  list-style-type: none;
 }
